RESOLVED FIXED137175
[cairo] GraphicsContext should not depend on GTK+
https://bugs.webkit.org/show_bug.cgi?id=137175
Summary [cairo] GraphicsContext should not depend on GTK+
Carlos Garcia Campos
Reported 2014-09-27 03:56:03 PDT
There are some unused methods for GTK+2 and gdk_cairo_region() to render the focus ring. gdk_cairo_region iterates the rectangles of the region to call cairo_rectangle, so we can easily replace it.
Attachments
Patch (5.92 KB, patch)
2014-09-27 03:59 PDT, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2014-09-27 03:59:02 PDT
Martin Robinson
Comment 2 2014-09-27 11:22:19 PDT
Comment on attachment 238771 [details] Patch Very nice.
Carlos Garcia Campos
Comment 3 2014-09-28 01:06:27 PDT
Note You need to log in before you can comment on or make changes to this bug.