Source/WebCore/platform/graphics/cairo/GraphicsContextPlatformPrivateCairo.h
@@ -36,10 +36,7 @@
 #include <math.h>
 #include <stdio.h>
 
-#if PLATFORM(GTK)
-#include <pango/pango.h>
-typedef struct _GdkExposeEvent GdkExposeEvent;
-#elif PLATFORM(WIN)
+#if PLATFORM(WIN)
 #include <cairo-win32.h>
 #endif
 
@@ -49,9 +46,6 @@ class GraphicsContextPlatformPrivate {
 public:
     GraphicsContextPlatformPrivate(PlatformContextCairo* newPlatformContext)
         : platformContext(newPlatformContext)
-#if PLATFORM(GTK)
-        , expose(0)
-#endif
 #if PLATFORM(WIN) || (PLATFORM(GTK) && OS(WINDOWS))
         // NOTE:  These may note be needed: review and remove once Cairo implementation is complete
         , m_hdc(0)
@@ -95,9 +89,6 @@ public:
     PlatformContextCairo* platformContext;
     Vector<float> layers;
 
-#if PLATFORM(GTK)
-    GdkEventExpose* expose;
-#endif
 #if PLATFORM(WIN) || (PLATFORM(GTK) && OS(WINDOWS))
     HDC m_hdc;
     bool m_shouldIncludeChildWindows;
